--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,7 +10,9 @@ dependencies:
   animate_do: ^4.2.0
   flutter:
     sdk: flutter
+  flutter_riverpod: ^2.6.1
   go_router: ^16.0.0
+  http: ^1.4.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
